# RAG-Evaluation-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  filestructure.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  eval.yaml  models.yaml  settings.py
data/: rag_eval.db
data/datasets/: index.json
data/datasets/ds_01KVF2AT51VKXYXERZ0P064MVF/: dataset.json  metadata.json
data/datasets/ds_01KVNTBFGN96YJK8MWZ2P8RQCJ/: dataset.json  metadata.json
data/datasets/ds_01KVNTBFGN96YJK8MWZ2P8RQCJ/archive/: dataset_v1.0.0.json
data/datasets/ds_01KVPMTWAPMQ1EM9NHJYE1VPVK/: dataset.json  metadata.json
data/datasets/ds_01KVPMTWAPMQ1EM9NHJYE1VPVK/archive/: dataset_v1.0.0.json
data/datasets/ds_01KVPMWFTKGWW0GAJ96KZPANCD/: dataset.json  metadata.json
data/datasets/ds_01KVPMWFTKGWW0GAJ96KZPANCD/archive/: dataset_v1.0.0.json
data/datasets/ds_01KVPNF6E5K98G6JKH1E07EMAZ/: dataset.json  metadata.json
data/datasets/ds_01KVPNF6E5K98G6JKH1E07EMAZ/archive/: dataset_v1.0.0.json
data/datasets/ds_01KVTFRFFXYBPB5A21WHFSCRAJ/: dataset.json  metadata.json
data/datasets/ds_01KVTFRFFXYBPB5A21WHFSCRAJ/archive/: dataset_v1.0.0.json
data/datasets/ds_01KVTSAMSBV5WXHZDNEY9EBHDF/: dataset.json  metadata.json
data/datasets/ds_01KVTSAMSBV5WXHZDNEY9EBHDF/archive/: dataset_v1.0.0.json  dataset_v1.0.1.json  dataset_v1.0.2.json  dataset_v1.0.3.json
data/datasets/ds_01KW244SFXSAFX5C0D0R2RZDN8/: dataset.json  metadata.json
data/datasets/ds_01KW244SFXSAFX5C0D0R2RZDN8/archive/: dataset_v1.0.0.json
data/datasets/ds_01KW261V2BE9WD04EE62XSFBVN/: dataset.json  metadata.json
data/datasets/ds_01KW261V2BE9WD04EE62XSFBVN/archive/: dataset_v1.0.0.json  dataset_v1.0.1.json  dataset_v1.0.2.json
data/raw_docs/: test_doc.txt
data/raw_docs/smoke_test_collection/: smoke_test.txt
data/vectorstore/: chroma.sqlite3
scripts/: verify_config.py
src/api/: app.py  dependencies.py
src/api/routes/: compare.py  datasets.py  evaluate.py  ingest.py
src/comparison/: runner.py
src/dataset/: base.py  generator.py  schema.py  store.py
src/evaluation/: base.py  engine.py  evaluators.py  schema.py
src/ingestion/: base.py  chunker.py  loaders.py  pipeline.py
src/rag/: pipeline.py  schema.py
src/storage/: database.py  models.py  repository.py
src/vectorstore/: base.py  chroma.py  embeddings.py
ui/: app.py
ui/components/: api_client.py  sidebar.py
ui/pages/: 01_ingest.py  02_dataset.py  03_evaluate.py  04_compare.py  05_history.py
