[tool.poetry]
name = "rag-eval-bench"
version = "0.1.0"
description = "Production-grade RAG Evaluation Benchmarking Tool with LLM-as-a-Judge, multi-model comparison, and interactive dashboard."
authors = ["Rohan <rohangoswami1134@google.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "ui" }, { include = "config" }]

# =============================================================================
# CORE RUNTIME DEPENDENCIES
# =============================================================================
[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# --- LLM & AI Framework ---
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-google-genai = "^2.0.0"
google-genai = "^0.3.0"              # New Google AI SDK (removed google-generativeai to avoid namespace collision)
langchain-chroma = ">=0.2.0"
langchain-openai = "^0.2.0"           # optional — multi-model comparison
langchain-anthropic = "^0.2.0"        # optional — multi-model comparison
transformers = ">=4.41.0,<5.0.0"

# --- Vector Store ---
chromadb = "0.4.24"

# --- Embeddings (local, zero API cost) ---
sentence-transformers = "^3.1.1"
torch = { version = "^2.4.1", source = "pytorch-cpu"}   # pulled by sentence-transformers

# --- Configuration & Validation ---
pydantic = "^2.7.4"
# --- pydantic = "^2.8.2" ---
pydantic-settings = "^2.4.0"
# --- pydantic-settings = "^2.3.4" ---
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"

# --- Document Loaders ---
pypdf = "^4.3.1"
python-docx = "^1.1.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"                        # fast HTML/XML parser for bs4

# --- API Backend ---
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
httpx = "^0.27.2"                      # async HTTP client (UI → API calls)
python-multipart = "^0.0.9"           # FastAPI file upload support

# --- Relational Storage ---
sqlalchemy = { version = "^2.0.35", extras = ["asyncio"] }
aiosqlite = "^0.20.0"                 # async SQLite driver
alembic = "^1.13.3"                   # DB migrations

# --- Data Processing ---
pandas = "^2.2.3"
numpy = "^1.26.4,<2.0.0"
# Pinned to <2.0 — chromadb 0.4.24 uses deprecated np.float_ removed in NumPy 2.0
scipy = "^1.14.1"                     # stats: mean, std, distributions

# --- Frontend ---
streamlit = "^1.38.0"
plotly = "^5.24.1"
altair = "^5.4.1"

# --- Observability & Logging ---
loguru = "^0.7.2"
langsmith = "^0.1.147"        # free tier, Python 3.13 compatible

# --- Retry & Resilience ---
tenacity = "^9.0.0"                   # exponential backoff for API calls

# --- Utilities ---
rich = "^13.8.1"                      # pretty console output for scripts
typer = "^0.12.5"                     # CLI for scripts/seed_demo_data
python-slugify = "^8.0.4"            # safe file/collection naming
ulid-py = "^1.1.0"                   # sortable unique run IDs (better than UUID4)

# --- Export & Reporting ---
openpyxl = "^3.1.5"                  # Excel export via pandas
reportlab = "^4.2.2"                 # PDF report generation
jinja2 = "^3.1.4"                    # HTML report templates

# =============================================================================
# DEVELOPMENT & TESTING DEPENDENCIES
# =============================================================================
[tool.poetry.group.dev.dependencies]
# --- Testing ---
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
respx = "^0.21.1"                    # mock httpx requests in tests
factory-boy = "^3.3.1"              # test data factories

# --- Static Analysis & Formatting ---
ruff = "^0.6.8"                      # linter + formatter (replaces flake8 + isort)
mypy = "^1.11.2"
types-pyyaml = "^6.0.12"
types-beautifulsoup4 = "^4.12.0"
types-requests = "^2.32.0"
pandas-stubs = "^2.2.3"

# --- Pre-commit ---
pre-commit = "^3.8.0"

# --- Dev Utilities ---
ipython = "^8.27.0"
jupyterlab = "^4.2.5"               # notebook exploration during dev
python-dotenv = "^1.0.1"            # REMOVE ?

# =============================================================================
# SCRIPTS (CLI entrypoints via Typer)
# =============================================================================
[tool.poetry.scripts]
seed-demo = "scripts.seed_demo_data:app"
export-report = "scripts.export_report:app"

# =============================================================================
# RUFF — Linter & Formatter Configuration
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (enforce type hints)
    "S",   # flake8-bandit (security)
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "S101",    # allow assert in tests
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]
"scripts/**/*.py" = ["ANN"]

[tool.ruff.isort]
known-first-party = ["src", "ui", "config"]

# =============================================================================
# MYPY — Static Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
exclude = ["tests/", "scripts/", "alembic/"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "unstructured.*",
    "reportlab.*",
    "phoenix.*",
    "openinference.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=75",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# =============================================================================
# BUILD SYSTEM
# =============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# PACKAGE SOURCES — CPU-only torch wheel to avoid pulling multi-GB CUDA libs
# =============================================================================
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
